# agendint-google-calendar

./: .env.example  .gitignore  README.md  gcal_sync.py  main.py  pyproject.toml  requirements.txt  scraper.py
