[project]
name = "agendint-google-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agendint",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
agendint = { git = "https://github.com/INT-Scripts/int-libraries.git", subdirectory = "packages/agendint" }
